[package]
name = "rust_websocket_game_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
actix-ws = "0.2"
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
log = "0.4"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }